# veltro_core

./: Cargo.toml  analysis_options.yaml
.github/workflows/: release.yml
src/: cli.rs  config.rs  ir.rs  main.rs  registry.rs  watcher.rs  writer.rs
src/pipeline/: analyzer.rs  generator.rs  mod.rs  parser.rs  resolver.rs  scanner.rs
src/plugin/: data_plugin.rs  mod.rs  veltro_plugin.rs
testdata/: generic.dart  nested.dart  simple.dart  state.dart
