[package]
name = "veltro"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "veltro"
path = "src/main.rs"

[dependencies]
clap              = { version = "4.5", features = ["derive"] }
walkdir           = "2.5"
rayon             = "1.10"
tree-sitter       = "0.26"
tree-sitter-dart  = "0.1"
notify            = "8.0"
crossbeam-channel = "0.5"
xxhash-rust       = { version = "0.8", features = ["xxh3"] }
dashmap           = "6.1"
chrono            = "0.4"
ctrlc             = "3.4"
thiserror         = "2.0"
anyhow            = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
