[package]
name = "veltro_core"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "veltro_core"
path = "src/main.rs"

[dependencies]
clap              = { version = "4.5", features = ["derive"] }
walkdir           = "2.5"
rayon             = "1.10"
tree-sitter       = "0.26"
tree-sitter-dart  = "0.1"
notify            = "8.0"
crossbeam-channel = "0.5"
xxhash-rust       = { version = "0.8", features = ["xxh3"] }
dashmap           = "6.1"
chrono            = "0.4"
ctrlc             = "3.4"
thiserror         = "2.0"
anyhow            = "1.0"
serde             = { version = "1", features = ["derive"] }  # ClassIR serialization + config parsing
serde_json        = "1"                                        # subprocess protocol (v1.5 future use)
serde_yaml        = "0.9"                                      # reads build.yaml
glob              = "0.3"                                      # expands include_patterns in scanner
regex             = "1"                                        # resolves build_extensions path rules

[dev-dependencies]
pretty_assertions = "1.4"
